[tool.poetry]
name = "api-banco"
version = "0.1.0"
description = ""
authors = ["André Aquino <andre.luiz.aquino30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
